feat: add hint over every element and changing elements by clicking on levels

--- a/RSS-CSS-Selectors/src/index.html
+++ b/RSS-CSS-Selectors/src/index.html
@@ -15,26 +15,14 @@
           <button class="menu-left__reset">Reset game</button>
         </header>
         <main class="selection">
-          <h2 class="selection__order">Select the plates</h2>
-          <h2 class="selection__orders">Select the bento boxes</h2>
-          <h2 class="selection__orders">Select the fancy plate</h2>
-          <h2 class="selection__orders">Select the apple on the plate</h2>
-          <h2 class="selection__orders">Select the pickle on the fancy plate</h2>
-          <h2 class="selection__orders">Select the small apples</h2>
-          <h2 class="selection__orders">Select the small oranges</h2>
-          <h2 class="selection__orders">Select the small oranges in the bentos</h2>
-          <h2 class="selection__orders">Select all the plates and bentos</h2>
-          <h2 class="selection__orders">Select all the things!</h2>
+          <h2 class="selection__order">Select the plates by type</h2>
           <button class="button-help">
             <div class="button-help__help">Help, I'm stuck!</div>
           </button>
           <div class="game-wrapper">
             <div class="table-wrapper">
               <div class="table-wrapper__surface"></div>
-              <div class="table">
-                <plate class="table__strobe"></plate>
-                <plate class="table__strobe"></plate>
-              </div>
+              <div class="table"></div>
             </div>
             <div class="table-edge">
               <div class="table-edge__leg"></div>
@@ -64,6 +52,7 @@
               </div>
             </div>
           </div>
+          <div class="window"></div>
           <div class="footer-contacts">
             <div class="footer-wrapper">
               <p><a href="https://github.com/Alexandra376"><img src="./img/github.png" alt="github__logo" width="50" height="50"></a></p>
@@ -77,16 +66,16 @@
     <div class="right-column">
       <div class="wrapper-right">
         <div class="menu-right">
-          <h1>Level 1</h1>
-          <h1>Level 2</h1>
-          <h1>Level 3</h1>
-          <h1>Level 4</h1>
-          <h1>Level 5</h1>
-          <h1>Level 6</h1>
-          <h1>Level 7</h1>
-          <h1>Level 8</h1>
-          <h1>Level 9</h1>
-          <h1>Level 10</h1>
+          <h1 data-text="Select the plates by type" id="one">Level 1</h1>
+          <h1 data-text="Select the bento boxes by their type" id="two">Level 2</h1>
+          <h1 data-text="Select the fancy plate by ID" id="three">Level 3</h1>
+          <h1 data-text="Select the apple on the plate" id="four">Level 4</h1>
+          <h1 data-text="Select the pickle on the fancy plate by combining the Descendant & ID Selectors" id="five">Level 5</h1>
+          <h1 data-text="Select the small apples by their class" id="six">Level 6</h1>
+          <h1 data-text="Select the small oranges by combining the Class Selector" id="seven">Level 7</h1>
+          <h1 data-text="Select the small oranges in the bentos by combining what you learned in the last few levels to solve this one!" id="eight">Level 8</h1>
+          <h1 data-text="Select all the plates and bentos by combining, selectors, with... commas!" id="nine">Level 9</h1>
+          <h1 data-text="Select all the things! By the Universal Selector *" id="ten">Level 10</h1>
         </div>
       </div>
     </div>
