refactor: add shaking of editor window

--- a/RSS-CSS-Selectors/src/index.html
+++ b/RSS-CSS-Selectors/src/index.html
@@ -55,9 +55,9 @@
           <div class="window"></div>
           <div class="footer-contacts">
             <div class="footer-wrapper">
-              <p><a href="https://github.com/Alexandra376"><img src="./img/github.png" alt="github__logo" width="50" height="50"></a></p>
-              <h4>Made by Alexandra376</h4>
-              <p><a href="https://rs.school/"><img src="./img/rsschool.svg" alt="rsschool__logo" width="50" height="50"></a></p>
+              <p><a href="https://github.com/Alexandra376">GitHub</a></p>
+              <h4>Learn and enjoy!</h4>
+              <p><a href="https://rs.school/">RS School</a></p>
             </div>
           </div>
         </main>
