--- a/RSS-CSS-Selectors/src/index.html
+++ b/RSS-CSS-Selectors/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="./img/plate.png" width="200" height="200">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
