--- a/RSS-CSS-Selectors/index.html
+++ b/RSS-CSS-Selectors/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<script defer src="index.54d7989df8afe0b9a5d7.js"></script></head>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="1416d5298c9acdd0eb59.png" width="200" height="200">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+<link rel="icon" href="plate.png"><script defer src="index.98e8a28b928e6747e464.js"></script></head>
+
 <body>
   <div class="main-block">
     <div class="left-column">
@@ -35,7 +38,8 @@
                 <div class="header-input__name">CSS Editor style.css</div>
               </div>
               <div class="input-window css-view">
-                <div class="input-window__numbers">1 <br> 2<br> 3<br> 4<br> 5<br> 6<br> 7<br> 8<br> 9<br> 10<br> 11<br> 12<br> 13<br> 14<br> 15<br> 16<br> 17<br> 18<br> 19<br> 20<br></div>
+                <div class="input-window__numbers">1 <br> 2<br> 3<br> 4<br> 5<br> 6<br> 7<br> 8<br> 9<br> 10<br> 11<br>
+                  12<br> 13<br> 14<br> 15<br> 16<br> 17<br> 18<br> 19<br> 20<br></div>
                 <input class="input-window__strobe" type="text" placeholder="Type in a CSS selector">
                 <span class="input-window__plus">+</span>
                 <div class="input-window__button">enter</div>
@@ -47,7 +51,8 @@
                 <div class="header-input__name">HTML Viewer table.html</div>
               </div>
               <div class="input-window">
-                <div class="input-window__numbers">1 <br> 2<br> 3<br> 4<br> 5<br> 6<br> 7<br> 8<br> 9<br> 10<br> 11<br> 12<br> 13<br> 14<br> 15<br> 16<br> 17<br> 18<br> 19<br> 20<br></div>
+                <div class="input-window__numbers">1 <br> 2<br> 3<br> 4<br> 5<br> 6<br> 7<br> 8<br> 9<br> 10<br> 11<br>
+                  12<br> 13<br> 14<br> 15<br> 16<br> 17<br> 18<br> 19<br> 20<br></div>
                 <div class="input-window__markup"></div>
               </div>
             </div>
@@ -57,7 +62,7 @@
             <div class="footer-wrapper">
               <p><a href="https://github.com/Alexandra376">GitHub</a></p>
               <h4>Learn and enjoy!</h4>
-              <p><a href="https://rs.school/">RS School</a></p>  
+              <p><a href="https://rs.school/">RS School</a></p>
             </div>
           </div>
         </main>
@@ -70,15 +75,20 @@
           <h1 data-text="Select the bento boxes by their type" id="two">Level 2</h1>
           <h1 data-text="Select the fancy plate by ID" id="three">Level 3</h1>
           <h1 data-text="Select the apple on the plate" id="four">Level 4</h1>
-          <h1 data-text="Select the pickle on the fancy plate by combining the Descendant & ID Selectors" id="five">Level 5</h1>
+          <h1 data-text="Select the pickle on the fancy plate by combining the Descendant & ID Selectors" id="five">
+            Level 5</h1>
           <h1 data-text="Select the small apples by their class" id="six">Level 6</h1>
           <h1 data-text="Select the small oranges by combining the Class Selector" id="seven">Level 7</h1>
-          <h1 data-text="Select the small oranges in the bentos by combining what you learned in the last few levels to solve this one!" id="eight">Level 8</h1>
-          <h1 data-text="Select all the plates and bentos by combining, selectors, with... commas!" id="nine">Level 9</h1>
+          <h1
+            data-text="Select the small oranges in the bentos by combining what you learned in the last few levels to solve this one!"
+            id="eight">Level 8</h1>
+          <h1 data-text="Select all the plates and bentos by combining, selectors, with... commas!" id="nine">Level 9
+          </h1>
           <h1 data-text="Select all the things! By the Universal Selector *" id="ten">Level 10</h1>
         </div>
       </div>
     </div>
   </div>
 </body>
+
 </html>
